K8s/auto/3-networking/0-routes/user-service/0-user-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-service-route
  labels:
    app: togather
    service: user-srv
    jwt: enabled
    ratelimitGlobal: enabled # enables ratelimiter
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway

  rules:
    # All other auth routes are public
    - name: user-private
      matches:
        - path:
            type: RegularExpression
            value: ^/api/v[0-9a-zA-Z]+/user/.*

      backendRefs:
        - name: user-srv
          port: 3000
